--- a/index.html
+++ b/index.html
@@ -25,6 +25,13 @@
         <label class='photo-widget_boolean-button'><input id="moveImageControl" type="checkbox"/><span>Move</span></label>
         <label class='photo-widget_boolean-button'><input id="cropImageControl" type="checkbox"/><span>Crop</span></label>
          <a class="button" id="save" href="#" download>save</a>
+        <label>
+          <span>Rotate</span>
+          <input id="rotateImageControl0" type="radio" checked="checked" name="rotate" value="0"/>
+          <input id="rotateImageControl90" type="radio" name="rotate" value="90"/>
+          <input id="rotateImageControl180" type="radio" name="rotate" value="180"/>
+          <input id="rotateImageControl270" type="radio" name="rotate" value="270"/>
+        </label>
       </div>
     </div>
   </div>
