--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
                     <span class="doesNotHaveDrag">Select a file to edit</span>
                     <input id="fileInput" type="file" accept="image/*"/></label>
             </p>
+            <div class="spinner">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
         </div>
         <div id="editor" class="photo-widget_editor"></div>
     </div>
@@ -45,7 +50,6 @@
                 </label>
             </div>
             <div class="photo-widget_control-group">
-
                 <label>
                     <span>Undo</span>
                     <button id="undoControl" title="Undo"><i class="icon-undo2"></i></button>
