--- a/index.html
+++ b/index.html
@@ -23,11 +23,6 @@
                     <span class="doesNotHaveDrag">Select a file to edit</span>
                     <input id="fileInput" type="file" accept="image/*"/></label>
             </p>
-            <div class="spinner">
-                <span></span>
-                <span></span>
-                <span></span>
-            </div>
         </div>
         <div id="editor" class="photo-widget_editor"></div>
     </div>
@@ -90,7 +85,11 @@
         </div>
     </div>
 </div>
-
+<div id="spinner" class="spinner is-hidden">
+    <span></span>
+    <span></span>
+    <span></span>
+</div>
 <script src="scripts/photo-editor.js"></script>
 
 </body>
