--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div id="tools" class="photo-widget_tools">
         <div class="photo-widget_toolbar">
             <div class="photo-widget_control-group">
-                <label><span class="photo-widget_blocky-label">Scale Image&nbsp;</span>
+                <label><span class="photo-widget_blocky-label">Scale Image&nbsp;<span id="scaleValue" class="photo-widget_control-value"></span></span>
                <span class="photo-widget_blocky-label">
                 <em>1%</em>
                     <input id="scaleImageControl" type="range" min="1" max="100" value="100"/>
