--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div id="tools" class="photo-widget_tools">
         <div class="photo-widget_toolbar">
             <div class="photo-widget_control-group">
-                <label><span class="photo-widget_blocky-label">Scale Image&nbsp;<span id="scaleValue" class="photo-widget_control-value"></span></span>
+                <label><span class="photo-widget_blocky-label">Scale Image&nbsp;<span id="scaleValue" class="photo-widget_control-value">100</span><span class="photo-widget_control-value">%</span></span>
                <span class="photo-widget_blocky-label">
                 <em>1%</em>
                     <input id="scaleImageControl" type="range" min="1" max="100" value="100"/>
@@ -54,7 +54,12 @@
                 </label>
             </div>
             <div class="photo-widget_control-group">
+                <label>
+                    <span class="photo-widget_blocky-label">Rotate Image&nbsp;<span id="rotationValue" class="photo-widget_control-value">0</span>
+                        <sup class="photo-widget_control-value">&deg;</sup>
+                        </span>
 
+</label>
                 <label>
                     <span>Rotate Left</span>
                     <button id="rotateLeft" title="Rotate Left" value="-90"><i class="icon-undo"></i></button>
@@ -74,7 +79,10 @@
                 </label>
             </div>
             <div class="photo-widget_control-group">
-                <label><span class="photo-widget_blocky-label">Zoom&nbsp;</span>
+                <label><span class="photo-widget_blocky-label">Zoom&nbsp; </span>
+                    <span id="zoomValue" class="photo-widget_control-value">100</span>
+                    <span>%</span>
+
                <span class="photo-widget_blocky-label">
                    <em>1%</em>
                 <input id="zoomControl" type="range" min="1" max="500" value="100"/>
