--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
             <div class="photo-widget_control-group">
                 <label>
                     <span>Undo</span>
-                    <button id="undoControl" title="Undo"><i class="icon-undo2"></i></button>
+                    <button id="undoControl" title="Undo" disabled="disabled"><i class="icon-undo2"></i></button>
                 </label>
                 <label><span>Redo</span>
-                    <button id="redoControl" title="Redo"><i class="icon-redo2"></i></button>
+                    <button id="redoControl" title="Redo" disabled="disabled"><i class="icon-redo2"></i></button>
                 </label>
             </div>
             <div class="photo-widget_control-group">
