--- a/old-layout.html
+++ b/old-layout.html
@@ -5,13 +5,11 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Photo Editor</title>
-
     <link rel="stylesheet" href="css/main.css">
-
 </head>
 <body>
 
-<div class="photo-widget is-column-layout">
+<div class="photo-widget is-row-layout">
     <div id="workspace" class="photo-widget_workspace">
         <div id="uploadInstructions" class="photo-widget_upload-instructions">
             <p><span class="hasDrag">Drag a file here</span>
@@ -32,41 +30,29 @@
     </div>
     <div id="tools" class="photo-widget_tools">
         <div class="photo-widget_toolbar">
-            <div class="photo-widget_control-group is-closed">
-                <button id="toolSwitchScale" class="photo-widget_tool-switch"><i class="icon-shrink"></i></button>
-                <div class="photo-widget_tool-group">
-                    <label>
+            <div class="photo-widget_control-group">
+                <label>
                     <span class="photo-widget_blocky-label">
                         Scale Image&nbsp;
                         <span id="scaleValue" class="photo-widget_control-value">100</span>
                         <span class="photo-widget_control-value">%</span>
                     </span>
-
                     <span class="photo-widget_blocky-label">
                         <em>1%</em>
                         <input id="scaleImageControl" type="range" min="1" max="100" value="100"/>
                         <em>100%</em>
                    </span>
-                    </label>
-                    <label>
-                        <span>Reset</span>
-                        <button id="resetScale" title="Reset Scale" disabled="disabled"><i class="icon-history"></i>
-                        </button>
-                    </label>
-                </div>
+                </label>
+                <label>
+                    <span>Reset</span>
+                    <button id="resetScale" title="Reset Scale" disabled="disabled"><i class="icon-history"></i></button>
+                </label>
             </div>
-            <div class="photo-widget_control-group is-closed">
-                <button id="toolSwitchCrop" class="photo-widget_tool-switch"><i class="icon-crop"></i></button>
-                <div class="photo-widget_tool-group">
-
+            <div class="photo-widget_control-group">
                 <button class="photo-widget_boolean-button" id="cropImageControl"><span>Crop</span></button>
-</div>
+
             </div>
-            <div class="photo-widget_control-group is-closed">
-                <button id="toolSwitchRotate" class="photo-widget_tool-switch"><i class="icon-history"></i></button>
-
-                <div class="photo-widget_tool-group">
-
+            <div class="photo-widget_control-group">
                 <label>
                     <span>Undo</span>
                     <button id="undoControl" title="Undo" disabled="disabled"><i class="icon-undo2"></i></button>
@@ -74,13 +60,8 @@
                 <label><span>Redo</span>
                     <button id="redoControl" title="Redo" disabled="disabled"><i class="icon-redo2"></i></button>
                 </label>
-                    </div>
             </div>
-            <div class="photo-widget_control-group is-closed">
-                <button id="toolSwitchScale" class="photo-widget_tool-switch"><i class="icon-spinner11"></i></button>
-
-                <div class="photo-widget_tool-group">
-
+            <div class="photo-widget_control-group">
                 <label>
                     <span class="photo-widget_blocky-label">Rotate Image&nbsp;<span id="rotationValue"
                                                                                     class="photo-widget_control-value">0</span>
@@ -94,32 +75,18 @@
                 <label><span>Rotate Right</span>
                     <button id="rotateRight" title="Rotate Right" value="90"><i class="icon-redo"></i></button>
                 </label>
-                    </div>
             </div>
-            <div class="photo-widget_control-group is-closed">
-                <div class="photo-widget_tool-group">
-                    <button id="toolSwitchScale" class="photo-widget_tool-switch">
-                        <i class="icon-floppy-disk"></i></button>
-
+            <div class="photo-widget_control-group">
                 <label>
                     <a class="button" id="save" href="#" download>save</a>
                 </label>
-                    </div>
             </div>
-            <div class="photo-widget_control-group is-closed">
-                <div class="photo-widget_tool-group">
-
-                    <button id="toolSwitchClear" class="photo-widget_tool-switch"><i class="icon-cancel-circle"></i></button>
-
+            <div class="photo-widget_control-group">
                 <label>
                     <button id="clearImageControl">Clear Image</button>
                 </label>
-                    </div>
             </div>
-            <div class="photo-widget_control-group is-closed">
-                <button id="toolSwitchZoom" class="photo-widget_tool-switch"><i class="icon-zoom-in"></i></button>
-
-                <div class="photo-widget_tool-group">
+            <div class="photo-widget_control-group">
                 <label><span class="photo-widget_blocky-label">Zoom&nbsp; </span>
                     <span id="zoomValue" class="photo-widget_control-value">100</span>
                     <span>%</span>
@@ -131,16 +98,11 @@
                 </label>
                 <label>
                     <span>Reset</span>
-                    <button id="zoom50Button" value="50" title="Zoom 50%" disabled="disabled"><i
-                            class="icon-history"></i></button>
-                    <button id="zoom100Button" value="100" title="Zoom 100%" disabled="disabled"><i
-                            class="icon-history"></i></button>
-                    <button id="zoom200Button" value="200" title="Zoom 200%" disabled="disabled"><i
-                            class="icon-history"></i></button>
-                    <button id="zoom500Button" value="500" title="Zoom 500%" disabled="disabled"><i
-                            class="icon-history"></i></button>
+                    <button id="zoom50Button"  value="50" title="Zoom 50%" disabled="disabled"><i class="icon-history"></i></button>
+                    <button id="zoom100Button" value="100" title="Zoom 100%" disabled="disabled"><i class="icon-history"></i></button>
+                    <button id="zoom200Button" value="200" title="Zoom 200%" disabled="disabled"><i class="icon-history"></i></button>
+                    <button id="zoom500Button" value="500" title="Zoom 500%" disabled="disabled"><i class="icon-history"></i></button>
                 </label>
-                    </div>
             </div>
         </div>
     </div>
