--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div id="tools" class="photo-widget_tools">
         <div class="photo-widget_toolbar">
             <div class="photo-widget_control-group is-closed">
-                <button id="toolSwitchScale" class="photo-widget_tool-switch"><i class="icon-shrink"></i></button>
+                <button id="toolSwitchScale" title="Scale Image" class="photo-widget_tool-switch"><i class="icon-shrink"></i></button>
                 <div class="photo-widget_tool-group">
                     <label>
                     <span class="photo-widget_blocky-label">
@@ -56,14 +56,14 @@
                 </div>
             </div>
             <div class="photo-widget_control-group is-closed">
-                <button id="toolSwitchCrop" class="photo-widget_tool-switch"><i class="icon-crop"></i></button>
+                <button id="toolSwitchCrop" title="Crop Image" class="photo-widget_tool-switch"><i class="icon-crop"></i></button>
                 <div class="photo-widget_tool-group">
 
                 <button class="photo-widget_boolean-button" id="cropImageControl"><span>Crop</span></button>
 </div>
             </div>
             <div class="photo-widget_control-group is-closed">
-                <button id="toolSwitchRotate" class="photo-widget_tool-switch"><i class="icon-history"></i></button>
+                <button id="toolSwitchHistory" title="Image History" class="photo-widget_tool-switch"><i class="icon-history"></i></button>
 
                 <div class="photo-widget_tool-group">
 
@@ -77,7 +77,7 @@
                     </div>
             </div>
             <div class="photo-widget_control-group is-closed">
-                <button id="toolSwitchScale" class="photo-widget_tool-switch"><i class="icon-spinner11"></i></button>
+                <button id="toolSwitchRotate" title="Rotate Image" class="photo-widget_tool-switch"><i class="icon-spinner11"></i></button>
 
                 <div class="photo-widget_tool-group">
 
@@ -98,7 +98,7 @@
             </div>
             <div class="photo-widget_control-group is-closed">
                 <div class="photo-widget_tool-group">
-                    <button id="toolSwitchScale" class="photo-widget_tool-switch">
+                    <button id="toolSwitchSave" title="Save Image" class="photo-widget_tool-switch">
                         <i class="icon-floppy-disk"></i></button>
 
                 <label>
@@ -109,15 +109,15 @@
             <div class="photo-widget_control-group is-closed">
                 <div class="photo-widget_tool-group">
 
-                    <button id="toolSwitchClear" class="photo-widget_tool-switch"><i class="icon-cancel-circle"></i></button>
+                    <button id="toolSwitchClear"  title="Start Over" class="photo-widget_tool-switch"><i class="icon-cancel-circle"></i></button>
 
                 <label>
-                    <button id="clearImageControl">Clear Image</button>
+                    <button id="clearImageControl">Cancel</button>
                 </label>
                     </div>
             </div>
             <div class="photo-widget_control-group is-closed">
-                <button id="toolSwitchZoom" class="photo-widget_tool-switch"><i class="icon-zoom-in"></i></button>
+                <button id="toolSwitchZoom" title="Zoom Image" class="photo-widget_tool-switch"><i class="icon-zoom-in"></i></button>
 
                 <div class="photo-widget_tool-group">
                 <label><span class="photo-widget_blocky-label">Zoom&nbsp; </span>
